<resources>
    <string name="app_name">Simpli Chess</string>

    <!-- Fragment names -->
    <string name="home">Home</string>
    <string name="game">Game</string>
    <string name="about">About</string>
    <string name="openings">Openings</string>
    <string name="analysis">Analysis</string>
    <string name="clock">Clock</string>
    <string name="settings">Settings</string>
    <string name="load_game">Load game</string>
    <string name="test_fragment">Test Fragment</string>

    <!-- Home fragment strings -->
    <string name="continue_game">Continue</string>
    <string name="new_game">New Game</string>
    <string name="exit">Exit</string>

    <!-- Game fragment strings -->
    <string name="reset_board">Reset Board</string>
    <string name="undoLastMove">Undo last move</string>
    <string name="offer_draw">Offer draw</string>
    <string name="resign">Resign</string>
    <string name="copy_pgn">Copy PGN</string>
    <string name="fen">FEN</string>
    <string name="pgn">PGN</string>
    <string name="plus1">+1</string>

    <!-- Settings fragment strings -->
    <string name="app">App</string>
    <string name="full_screen">Full Screen</string>
    <string name="vibrate">Vibrate</string>
    <string name="sound">Sound</string>
    <string name="move_animation">Move animation</string>
    <string name="player_names">Player names</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="board">Board</string>
    <string name="background_image">Background image</string>
    <string name="select_board_theme">Select board theme</string>
    <string name="invert_black_pieces">Invert Black Pieces</string>
    <string name="cheat_mode">Cheat Mode</string>
    <string name="timer">Timer</string>
    <string name="set_time">Set time</string>
    <string name="mm">mm</string>
    <string name="colon">:</string>
    <string name="ss">ss</string>
    <string name="sample_time">10:00.0</string>

    <!-- Saved games fragment strings-->
    <string name="no_games_found">No games found</string>
    <string name="delete_game">Delete game</string>
    <string name="saved_games">Saved games</string>
    <string name="delete_all">Delete all</string>

    <!-- Load game fragment strings -->
    <string name="no_game_loaded">No game loaded</string>
    <string name="autoplay_moves">Autoplay moves</string>
    <string name="move_next">Move next</string>
    <string name="move_previous">Move previous</string>

    <!-- About fragment strings -->
    <string name="app_icon">App icon</string>
    <string name="version">Version</string>
    <string name="developedBy">Developed by</string>
    <string-array name="developers">
        <item>Dileep Raj B</item>
    </string-array>
    <string name="chess_pieces">Chess pieces</string>
    <string name="c_burnett_link"><a href="https://commons.wikimedia.org/wiki/Category:SVG_chess_pieces">Colin M.L. Burnett</a></string>

    <!-- Clock fragment strings -->
    <string name="time_control">Time Control</string>

    <!-- Test fragment strings -->
    <string name="test">Test</string>

    <!-- Dialog strings -->
    <string name="single_player">Single Player</string>
    <string name="two_players">2 players</string>
    <string name="play_as">Play As</string>
    <string name="start">Start</string>
    <string name="export_pgn">Export PGN</string>
    <string name="load_from_pgn">Load from PGN</string>
    <string name="load">Load</string>
    <string name="cancel">Cancel</string>
    <string name="paste_your_pgn_here">Paste your PGN here</string>
    <string name="paste_from_clipboard">Paste from clipboard</string>
    <string name="game_over">Game Over</string>
    <string name="close">Close</string>

    <!-- Chess pieces -->
    <string name="king">King</string>
    <string name="queen">Queen</string>
    <string name="rook">Rook</string>
    <string name="knight">Knight</string>
    <string name="bishop">Bishop</string>
    <string name="pawn">Pawn</string>

    <!-- Chess titles -->
    <string name="title_gm">GM</string>
    <string name="title_im">IM</string>
    <string name="title_fm">FM</string>
    <string name="title_cm">CM</string>
    <string name="title_wgm">WGM</string>
    <string name="title_wim">WIM</string>
    <string name="title_wfm">WFM</string>
    <string name="title_wcm">WCM</string>
    <string-array name="chess_titles">
        <item>@string/title_gm</item>
        <item>@string/title_im</item>
        <item>@string/title_fm</item>
        <item>@string/title_cm</item>
        <item>@string/title_wgm</item>
        <item>@string/title_wim</item>
        <item>@string/title_wfm</item>
        <item>@string/title_wcm</item>
    </string-array>

    <!-- Unicodes -->
    <string name="white_circle">○</string>
    <string name="black_circle">●</string>
    <string name="draw"> \u00BD</string>
    <string name="trophy"> 🏆</string>
    <string name="unicode_kw">\u2654</string>
    <string name="unicode_qw">\u2655</string>
    <string name="unicode_rw">\u2656</string>
    <string name="unicode_bw">\u2657</string>
    <string name="unicode_nw">\u2658</string>
    <string name="unicode_pw">\u2659</string>
    <string name="unicode_kb">\u265A</string>
    <string name="unicode_qb">\u265B</string>
    <string name="unicode_rb">\u265C</string>
    <string name="unicode_bb">\u265D</string>
    <string name="unicode_nb">\u265E</string>
    <string name="unicode_pb">\u265F</string>
    <string-array name="unicodes">
        <item>\u2654</item>
        <item>\u2655</item>
        <item>\u2656</item>
        <item>\u2657</item>
        <item>\u2658</item>
        <item>\u2659</item>
        <item>\u265A</item>
        <item>\u265B</item>
        <item>\u265C</item>
        <item>\u265D</item>
        <item>\u265E</item>
        <item>\u265F</item>
    </string-array>

    <!-- Lipsum -->
    <string name="lipsum1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <string name="inaccuracy">Inaccuracy</string>
    <string name="mistake">Mistake</string>
    <string name="blunder">Blunder</string>
    <string name="average_cpl">Average CPL</string>
    <string name="accuracy">Accuracy</string>
    <string name="zero">0</string>
    <string name="zero_percent">0%</string>

    <string name="shrink_expand">Shrink/Expand board</string>
    <string name="sample_uci_promotion">e7e8q</string>
</resources>