<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <group>
        <item
            android:id="@+id/nav_load_game"
            android:icon="@drawable/ic_open"
            android:title="@string/load_game" />
        <item
            android:id="@+id/nav_analysis"
            android:title="@string/analysis" />
        <item
            android:id="@+id/nav_saved_games"
            android:icon="@drawable/ic_saved_library"
            android:title="@string/saved_games" />
    </group>

    <group>
        <item
            android:id="@+id/nav_openings"
            android:icon="@drawable/ic_library_books"
            android:title="@string/openings" />
        <item
            android:id="@+id/nav_clock"
            android:icon="@drawable/ic_timer"
            android:title="@string/clock" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>
</menu>