<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".fragments.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            style="@style/LabelText14sp"
            android:text="@string/app" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/fullScreenToggle"
            style="@style/TextWhite18sp"
            android:text="@string/full_screen"
            app:drawableLeftCompat="@drawable/ic_fullscreen" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/vibrationToggle"
            style="@style/TextWhite18sp"
            android:text="@string/vibrate"
            app:drawableLeftCompat="@drawable/ic_vibration" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/soundToggle"
            style="@style/TextWhite18sp"
            android:text="@string/sound"
            app:drawableLeftCompat="@drawable/ic_sound" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/animationToggle"
            style="@style/TextWhite18sp"
            android:text="@string/move_animation"
            app:drawableLeftCompat="@drawable/ic_animation" />

        <com.google.android.material.divider.MaterialDivider style="@style/Divider2dp" />

        <TextView
            style="@style/LabelText14sp"
            android:text="@string/player_names" />

        <LinearLayout
            android:id="@+id/whiteLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextWhite18sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:labelFor="@+id/whiteName"
                android:text="@string/white"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/whiteName"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="0.7"
                android:autofillHints="White"
                android:background="@null"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:paddingHorizontal="8dp"
                android:text="@string/white"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/blackLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextWhite18sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:labelFor="@+id/blackName"
                android:text="@string/black"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/blackName"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="0.7"
                android:autofillHints="Black"
                android:background="@null"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:paddingHorizontal="8dp"
                android:text="@string/black"
                android:textColor="@color/white" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider style="@style/Divider2dp" />

        <TextView
            style="@style/LabelText14sp"
            android:text="@string/board" />

        <com.drdedd.simplichess.views.ChessBoard
            android:id="@+id/previewBoard"
            style="@style/ChessBoardStyle"
            android:layout_margin="8dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/useBoardBackground"
            style="@style/TextWhite18sp"
            android:text="@string/background_image" />

        <LinearLayout
            android:id="@+id/ThemeMenuLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/SelectThemeText"
                style="@style/TextWhite18sp"
                android:layout_width="0dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:text="@string/select_board_theme" />

            <Spinner
                android:id="@+id/themeSpinnerMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/white" />
        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/invertBlackSVGToggle"
            style="@style/TextWhite18sp"
            android:text="@string/invert_black_pieces" />

        <com.google.android.material.divider.MaterialDivider style="@style/Divider2dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/cheatToggle"
            style="@style/TextWhite18sp"
            android:text="@string/cheat_mode"
            app:drawableLeftCompat="@drawable/ic_stars" />

        <com.google.android.material.divider.MaterialDivider style="@style/Divider2dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/timerToggle"
            style="@style/TextWhite18sp"
            android:text="@string/timer"
            app:drawableLeftCompat="@drawable/ic_timer" />

        <LinearLayout
            android:id="@+id/timerInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:paddingVertical="8dp">

            <TextView
                style="@style/TextWhite18sp"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:text="@string/set_time" />

            <EditText
                android:id="@+id/minutesInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/mm"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                style="@style/TextWhite18sp"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/colon"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/secondsInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/ss"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />
    </LinearLayout>
</ScrollView>