<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <Button
        android:id="@+id/btn_continue_game"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/continue_game"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_new_game"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/new_game"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_exit_app"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_open_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_fragment" />
</LinearLayout>