<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.LoadGameFragment">

    <LinearLayout
        android:id="@+id/notLoadedLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_no_game_loaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/no_game_loaded"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_load_game"
            style="@style/DefaultButtonStyle"
            android:layout_margin="8dp"
            android:text="@string/load_game" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/loadedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <Button
                    android:id="@+id/btn_copy_pgn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pgn"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:drawableLeftCompat="@drawable/ic_copy"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_copy_fen"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_copy_fen"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fen"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:drawableLeftCompat="@drawable/ic_copy"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_save_pgn"
                    app:layout_constraintStart_toEndOf="@+id/btn_copy_pgn"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_save_pgn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pgn"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:drawableLeftCompat="@drawable/ic_save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_copy_fen"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pgn_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="2dp" />

            <com.drdedd.simplichess.views.CompactBoard
                android:id="@id/analysisBoard"
                style="@style/ChessBoardStyle" />

            <com.drdedd.simplichess.views.EvalBar
                android:id="@+id/gameEvalBar"
                style="@style/EvalBarStyle" />

            <LinearLayout
                android:id="@+id/GameViewOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp">

                <ImageButton
                    android:id="@+id/move_previous"
                    style="@style/ImageButton40dp"
                    android:layout_marginHorizontal="28dp"
                    android:contentDescription="@string/move_previous"
                    app:srcCompat="@drawable/ic_left" />

                <ImageButton
                    android:id="@+id/move_autoplay"
                    style="@style/ImageButton40dp"
                    android:layout_marginHorizontal="28dp"
                    android:contentDescription="@string/autoplay_moves"
                    app:srcCompat="@drawable/ic_play" />

                <ImageButton
                    android:id="@+id/move_next"
                    style="@style/ImageButton40dp"
                    android:layout_marginHorizontal="28dp"
                    android:contentDescription="@string/move_next"
                    app:srcCompat="@drawable/ic_right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/accuracyReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/translucent_50"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/NotoSans16sp"
                    android:layout_margin="8dp"
                    android:text="@string/analysis"
                    android:textFontWeight="600" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/whiteName"
                        style="@style/NotoSans14sp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/white"
                        android:textFontWeight="600" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/blackName"
                        style="@style/NotoSans14sp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/black"
                        android:textFontWeight="600" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/whiteInaccuracy"
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/zero" />

                        <TextView
                            android:id="@+id/whiteMistake"
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/zero" />

                        <TextView
                            android:id="@+id/whiteBlunder"
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/zero" />

                        <TextView
                            android:id="@+id/whiteACPL"
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/zero" />

                        <TextView
                            android:id="@+id/whiteAccuracy"
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/zero_percent" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/inaccuracy" />

                        <TextView
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/mistake" />

                        <TextView
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/blunder" />

                        <TextView
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/average_cpl" />

                        <TextView
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/accuracy" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/blackInaccuracy"
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/zero" />

                        <TextView
                            android:id="@+id/blackMistake"
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/zero" />

                        <TextView
                            android:id="@+id/blackBlunder"
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/zero" />

                        <TextView
                            android:id="@+id/blackACPL"
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/zero" />

                        <TextView
                            android:id="@+id/blackAccuracy"
                            style="@style/NotoSans12sp"
                            android:padding="2dp"
                            android:text="@string/zero_percent" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>