<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        style="@style/NotoSans16sp"
        android:layout_margin="16dp"
        android:text="@string/new_game"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/single_player"
            style="@style/NotoSans14sp"
            android:layout_margin="8dp"
            android:checked="true"
            android:text="@string/single_player" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/two_players"
            style="@style/NotoSans14sp"
            android:layout_margin="8dp"
            android:text="@string/two_players" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/playAsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/NotoSans16sp"
            android:layout_margin="8dp"
            android:text="@string/play_as"
            android:textFontWeight="500" />

        <RadioGroup
            android:id="@+id/playAs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:scaleX="0.8"
                android:scaleY="0.8"
                app:drawableStartCompat="@drawable/pw" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.8"
                android:scaleY="0.8"
                app:drawableStartCompat="@drawable/pb" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.8"
                android:scaleY="0.8"
                app:drawableStartCompat="@drawable/black_white" />
        </RadioGroup>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start"
            style="@style/DefaultButtonStyle"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/DefaultButtonStyle"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>